add belajar button belajar huruf, warna

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">Guess What</string>
+    <string name="app_name">Adek Lita</string>
     <string name="category_title">Pilih Kategori</string>
     <string name="fruits">Buah-buahan</string>
     <string name="animal">Binatang</string>
