--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="fruits">Buah-buahan</string>
     <string name="animal">Binatang</string>
     <string name="your_chance">Kesempatanmu: </string>
-    <string name="static_question">Apa bahasa inggrisnya ini ?</string>
+    <string name="static_question">Apakah ini ?</string>
     <string name="skip_this">Lewati</string>
     <string name="tips">Tahan tombol dan ucapkan jawaban untuk menjawab</string>
     <string name="try_again">Coba Lagi :(</string>
